--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "jwt-simple": "^0.5.1",
-    "massive": "^3.0.0-rc1",
+    "massive": "^2.6.1",
     "moment": "^2.18.1",
     "path": "^0.12.7",
     "rxjs": "^5.4.1",
