--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^4.2.3",
     "@angular/router": "^4.2.3",
     "@types/node": "^7.0.31",
+    "@types/underscore": "^1.8.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
@@ -42,6 +43,7 @@
     "rxjs": "^5.4.1",
     "systemjs": "^0.20.14",
     "typescript": "^2.3.4",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.12"
   }
 }
