--- a/package.json
+++ b/package.json
@@ -35,12 +35,18 @@
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "cors": "^2.8.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
+    "fs": "0.0.1-security",
+    "handlebars": "^4.0.10",
     "jwt-simple": "^0.5.1",
     "massive": "^2.6.1",
     "moment": "^2.18.1",
     "path": "^0.12.7",
+    "postmark": "^1.3.1",
+    "rand-token": "^0.3.0",
     "rxjs": "^5.4.1",
+    "sendgrid": "^5.1.1",
     "systemjs": "^0.20.14",
     "typescript": "^2.3.4",
     "underscore": "^1.8.3",
