--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc -p src/",
     "build:watch": "tsc -p src/ -w",
-    "serve": "lite-server -c=bs-config.json",
-    "start": "concurrently \"npm run build:watch\" \"nodemon\"",
+    "start": "concurrently \"npm run build:watch\" \"node index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
